project page change

--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
 greetings: "Hi"
 icon: "waving-hand.png"
-title: "Ambitious Developer"
+title: "I am 2nd year Web developer"
 subtitlePrefix: "Scroll through my "
-subtitle: "portfolio"
+subtitle: "portfolio :)"
 ---
 
 Web Developer Lee Minho.
