--- a/content/index/about/about.mdx
+++ b/content/index/about/about.mdx
@@ -1,14 +1,14 @@
 ---
-title: "About This Starter"
-image: "./charles-deluvio-DgoyKNgPiFQ-unsplash.jpg"
+title: "About Me"
+image: "./mypic.png"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-Portfolio Minimal is a Gatsby Starter that creates your one-page portfolio within minutes!
+One year experience in using next.js framework project. Also using redux.js for contextual variable management.
 
-It has predefined sections for your bio, skills, projects, and contact details. If you are a writer on Medium, you can integrate your latest articles in a distinct section as well. There is a section template included if you want to add more custom sections.
+Confidence in using ubuntu server for deployment using jenkins.
 
-Using Styled Components, the starter has full theming support, making color and font changes easy.
+Recently, I'v began to have interest in docker.
 
-Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>Charles Deluvio</Underlining></a> on Unsplash
+Other than that, I love snikers, beer and gym training ;)
