--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,10 +1,9 @@
 ---
-title: "Issues?"
-name: "Gatsby Starter Portfolio Minimal"
-email: "mail@example.com"
+title: "Contact"
+name: "Lee Min Ho"
+email: "37alsgh@gmail.com"
+phone: "010-9374-8072"
 profileImage: "../../favicon.png"
 ---
 
 import Underlining from "../../../src/styles/underlining"
-
-If you have any problems with this starter, create an issue in the <a href="https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub repository</Underlining></a>.
