--- a/content/index/index.mdx
+++ b/content/index/index.mdx
@@ -1,5 +1,5 @@
 ---
-seoTitle: "Portfolio Minimal - A Gatsby Starter."
+seoTitle: "Portfolio - Minho"
 useSeoTitleSuffix: false
 useSplashScreen: false
 ---
