--- a/content/index/interests/interests.mdx
+++ b/content/index/interests/interests.mdx
@@ -5,36 +5,20 @@ title: "Features"
 export const shownItems = 5
 export const interests = [
   {
-    name: "Quick and Easy Setup",
-    icon: "./icons/joystick.png",
+    name: "Suwon Univ (4 years) graduated",
+    icon: "./icons/graduation_cap.jpg",
   },
   {
-    name: "Content via Markdown",
-    icon: "./icons/notebook.png",
+    name: "Engineer Information Processing Certificate",
+    icon: "./icons/certificate.png",
   },
   {
-    name: "Responsive Design",
-    icon: "./icons/nail-polish.png",
+    name: "TOEIC Speaking level 7",
+    icon: "./icons/toeic.png",
   },
   {
-    name: "Medium Integration",
-    icon: "./icons/medium.png",
-  },
-  {
-    name: "Animations",
-    icon: "./icons/gem-stone.png",
-  },
-  {
-    name: "PWA (Offline Support)",
-    icon: "./icons/mobile-phone.png",
-  },
-  {
-    name: "Modern Tech-Stack",
-    icon: "./icons/gatsby.png",
-  },
-  {
-    name: "Blazing Fast",
-    icon: "./icons/high-voltage.png",
+    name: "2nd year Web developing",
+    icon: "./icons/career.png",
   },
 ]
 
