toeic score edit

--- a/content/index/interests/interests.mdx
+++ b/content/index/interests/interests.mdx
@@ -13,7 +13,11 @@ export const interests = [
     icon: "./icons/certificate.png",
   },
   {
-    name: "TOEIC Speaking level 7",
+    name: "TOEIC Speaking level 6",
+    icon: "./icons/toeic.png",
+  },
+  {
+    name: "TOEIC score 885",
     icon: "./icons/toeic.png",
   },
   {
